tests/const_block_compiler_error_at_pack_span_bad.stderr
tests/const_block_compiler_error_at_pack_span_bad.sl:11:10: SL2075: consteval error: pack boom
